--- a/Driver/NLog.config
+++ b/Driver/NLog.config
@@ -7,6 +7,6 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Warn" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="console" />
   </rules>
 </nlog>
