--- a/Crust/Crust.csproj
+++ b/Crust/Crust.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{ED77DFDE-BA78-43B9-8B56-68603110B8B6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Crust</RootNamespace>
-    <AssemblyName>Crust</AssemblyName>
+    <RootNamespace>iFix.Crust</RootNamespace>
+    <AssemblyName>iFix.Crust</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -57,9 +57,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="NLog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <None Include="NLog.xsd">
       <SubType>Designer</SubType>
     </None>
