--- a/Crust/Crust.csproj
+++ b/Crust/Crust.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Connector.cs" />
     <Compile Include="Fix44\DurableConnection.cs" />
     <Compile Include="InitializingConnector.cs" />
+    <Compile Include="SortedPropertyDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TcpConnector.cs" />
   </ItemGroup>
