--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{ED77DFDE-BA78-43B9-8B56-68603110B8B6}</ProjectGuid>
+    <ProjectGuid>{1BA2B875-5457-49ED-84FC-4F98AC8449C2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>iFix.Crust</RootNamespace>
-    <AssemblyName>iFix.Crust</AssemblyName>
+    <RootNamespace>iFix.Common</RootNamespace>
+    <AssemblyName>iFix.Common</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NLog">
-      <HintPath>..\packages\NLog.3.1.0.0\lib\net45\NLog.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -42,37 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Client.cs" />
-    <Compile Include="Fix44\Client.cs" />
-    <Compile Include="Connector.cs" />
-    <Compile Include="Fix44\ClOrdIDGenerator.cs" />
-    <Compile Include="Fix44\DurableConnection.cs" />
-    <Compile Include="Fix44\MessageBuilder.cs" />
-    <Compile Include="Fix44\MessageDecoder.cs" />
-    <Compile Include="Fix44\OrderManager.cs" />
-    <Compile Include="InitializingConnector.cs" />
-    <Compile Include="Fix44\MessagePump.cs" />
-    <Compile Include="PriorityQueue.cs" />
-    <Compile Include="ScheduledQueue.cs" />
-    <Compile Include="Scheduler.cs" />
+    <Compile Include="Assert.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TcpConnector.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj">
-      <Project>{1ba2b875-5457-49ed-84fc-4f98ac8449c2}</Project>
-      <Name>Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Mantle\Mantle.csproj">
-      <Project>{cc1e5319-213b-4efe-a360-957deef046cc}</Project>
-      <Name>Mantle</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="NLog.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
