--- a/Driver/NLog.config
+++ b/Driver/NLog.config
@@ -2,11 +2,14 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
+  <variable name="basedir" value="."/>
+
   <targets>
-    <target name="console" xsi:type="Console" layout="[${longdate} ${level:uppercase=true} ${logger:shortName=true}] ${message} ${exception:format=tostring}" />
+    <target name="file" xsi:type="File" layout="[${longdate} ${level:uppercase=true} ${logger:shortName=true}] ${message} ${exception:format=tostring}" fileName="${basedir}/${processname}.${shortdate}.log" />
+    <target name="console" xsi:type="ColoredConsole" layout="[${longdate} ${level:uppercase=true} ${logger:shortName=true}] ${message} ${exception:format=tostring}" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Info" writeTo="console" />
+    <logger name="*" minlevel="Info" writeTo="console,file" />
   </rules>
 </nlog>
